Confirm chocolatey installs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,9 +46,9 @@ Windows:
     - windows
   before_script:
     - Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1"
-    - choco install git --force --params "/GitAndUnixToolsOnPath"
-    - choco install 7zip
-    - choco install cmake.install --installargs 'ADD_CMAKE_TO_PATH=System'
+    - choco install git --force --params "/GitAndUnixToolsOnPath" -y
+    - choco install 7zip -y
+    - choco install cmake.install --installargs 'ADD_CMAKE_TO_PATH=System' -y
     - refreshenv
   stage: build
   allow_failure: true
