--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,9 +45,6 @@ Windows:
   tags:
     - windows
   before_script:
-    - echo -v:diag
-    - echo "-v:diag"
-    - "echo -v:diag"
     - Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1"
     - choco install git --force --params "/GitAndUnixToolsOnPath" -y
     - choco install 7zip -y
@@ -61,7 +58,7 @@ Windows:
     - Start-Process powershell CI\MemoryLogger.ps1 -NoNewWindow
     - cd $CI_PROJECT_DIR
     - sh CI/before_script.msvc.sh -c RelWithDebInfo -p Win64 -v 2019 -k -V
-    - "cmake --build MSVC2019_64 --target ALL_BUILD --config RelWithDebInfo -- -v:diag"
+    - cmake --build MSVC2019_64 --target ALL_BUILD --config RelWithDebInfo -v
 #   TODO: to anyone wanting to do further work here, we need to figure out how to get the below working
 #   TODO: on gitlab's new shared windows runners. They currently don't have bash or anything else installed
 #   TODO: it is currently just a bare windows 10 with powershell.
