--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,8 @@ Windows:
     - cd $CI_PROJECT_DIR
     - sh CI/before_script.msvc.sh -c Release -p Win64 -v 2019 -k -V
     - cmake --build MSVC2019_64 --target openmw --config Release -v *>&1
-    - echo $?
+    - cd MSVC2019_64\Release
+    - 7z a -tzip ..\..\OpenMW_MSVC2019_64_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}.zip '*'
 #   TODO: to anyone wanting to do further work here, we need to figure out how to get the below working
 #   TODO: on gitlab's new shared windows runners. They currently don't have bash or anything else installed
 #   TODO: it is currently just a bare windows 10 with powershell.
