--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,7 @@ Windows:
     - echo "started by ${GITLAB_USER_NAME}"
     - cd $CI_PROJECT_DIR
     - sh CI/before_script.msvc.sh -c RelWithDebInfo -p Win64 -v 2019 -k -V
-    - cmake --build MSVC2019_64 --target openmw --config RelWithDebInfo
+    - cmake --build MSVC2019_64 --target ALL_BUILD --config RelWithDebInfo
     - cd MSVC2019_64\RelWithDebInfo
     - 7z a -tzip ..\..\OpenMW_MSVC2019_64_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}.zip '*'
 #   TODO: to anyone wanting to do further work here, we need to figure out how to get the below working
