--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,11 +55,13 @@ Windows:
     - $Time = (date -Format "%H:%m")
     - echo $Time
     - echo "started by ${GITLAB_USER_NAME}"
+    - $MemoryLogger = Start-Process powershell CI\MemoryLogger.ps1 -NoNewWindow -PassThru
     - cd $CI_PROJECT_DIR
     - sh CI/before_script.msvc.sh -c Release -p Win64 -v 2019 -k -V
     - cmake --build MSVC2019_64 --target ALL_BUILD --config Release
     - cd MSVC2019_64\Release
     - 7z a -tzip ..\..\OpenMW_MSVC2019_64_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}.zip '*'
+    - Stop-Process $MemoryLogger
 #   TODO: to anyone wanting to do further work here, we need to figure out how to get the below working
 #   TODO: on gitlab's new shared windows runners. They currently don't have bash or anything else installed
 #   TODO: it is currently just a bare windows 10 with powershell.
