--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,10 +55,9 @@ Windows:
     - $Time = (date -Format "%H:%m")
     - echo $Time
     - echo "started by ${GITLAB_USER_NAME}"
-    - $MemoryLogger = Start-Process powershell CI\MemoryLogger.ps1 -NoNewWindow -PassThru
+    - $MemoryLogger = Start-Process powershell CI\MemoryLogger.ps1 -RedirectStandardOut memorylog.log -PassThru
     - cd $CI_PROJECT_DIR
     - sh CI/before_script.msvc.sh -c Release -p Win64 -v 2019 -k -V
-    - While ($True) { Write-Host fuck }
     - cmake --build MSVC2019_64 --target ALL_BUILD --config Release
     - cd MSVC2019_64\Release
     - 7z a -tzip ..\..\OpenMW_MSVC2019_64_${CI_BUILD_REF_NAME}_${CI_BUILD_ID}.zip '*'
