More argument experimentation

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,6 @@ Windows:
   tags:
     - windows
   before_script:
-    - echo "-File","CI\GitLabWindows.ps1","-GitLabUserName",$GITLAB_USER_NAME,"-CIProjectDir",$CI_PROJECT_DIR,"-CIBuildRefName",$CI_BUILD_REF_NAME,"-CIBuildID",$CI_BUILD_ID
     - Import-Module "$env:ChocolateyInstall\helpers\chocolateyProfile.psm1"
     - choco install git --force --params "/GitAndUnixToolsOnPath" -y
     - choco install 7zip -y
@@ -53,7 +52,7 @@ Windows:
     - refreshenv
   stage: build
   script:
-    - Start-Process powershell -Wait -RedirectStandardOutput stdout.log -RedirectStandardError stderr.log -ArgumentList "-File","CI\GitLabWindows.ps1","-GitLabUserName",$GITLAB_USER_NAME,"-CIProjectDir",$CI_PROJECT_DIR,"-CIBuildRefName",$CI_BUILD_REF_NAME,"-CIBuildID",$CI_BUILD_ID
+    - Start-Process powershell -Wait -RedirectStandardOutput stdout.log -RedirectStandardError stderr.log -ArgumentList "-File","CI\GitLabWindows.ps1","-GitLabUserName","AnyOldName3, The Hardcoded One","-CIProjectDir",$CI_PROJECT_DIR,"-CIBuildRefName",$CI_BUILD_REF_NAME,"-CIBuildID",$CI_BUILD_ID
     # Hopefully, this failing and giving a bad exit code will make the build fail.
     - Get-ChildItem SuccessfulBuild.txt
 #   TODO: to anyone wanting to do further work here, we need to figure out how to get the below working
