--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,7 +52,7 @@ Windows:
     - refreshenv
   stage: build
   script:
-    - CI\GitLabWindows.ps1 -GitLabUserName $GITLAB_USER_NAME -CIProjectDir $CI_PROJECT_DIR -CIBuildRefName $CI_BUILD_REF_NAME -CIBuildID $CI_BUILD_ID *>&1 | ForEach-Object { "$(Get-Date -Format "HH:mm:ss") $_" } | Out-File out.log
+    - CI\GitLabWindows.ps1 -GitLabUserName $GITLAB_USER_NAME -CIProjectDir $CI_PROJECT_DIR -CIBuildRefName $CI_BUILD_REF_NAME -CIBuildID $CI_BUILD_ID *>&1 | ForEach-Object { "$(Get-Date -Format "HH:mm:ss") $_" } | Tee-Object out.log
     - Get-History | Out-String -Width 1024
     # Hopefully, this failing and giving a bad exit code will make the build fail.
     - Get-ChildItem SuccessfulBuild.txt
