--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,6 +76,7 @@ Windows:
     paths:
     - "*.zip"
     - "*.log"
+    - MSVC2019_64_Ninja/*
     - MSVC2019_64_Ninja/*.log
     - MSVC2019_64_Ninja/*/*.log
     - MSVC2019_64_Ninja/*/*/*.log
