--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,7 +53,9 @@ Windows:
   - choco install ninja -y
   - choco install python -y
   - refreshenv
-  - vswhere
+  - vswhere -products *
+  - vswhere -all
+  - vswhere -all -products *
   stage: build
   script:
     - $time = (Get-Date -Format "HH:mm:ss")
